test/spec_vectors/simd_load_zero/fail/module_2.wat
(module (memory 0) (func (result v128) (v128.load64_zero (f32.const 0))))